Use proper cover href for EPUB 3.0

BUG: 451226

Rationale for change: see comments in  https://bugs.kde.org/show_bug.cgi?id=451226